@@ -124,21 +124,7 @@ name|Collection
 argument_list|<
 name|QueryDescriptor
 argument_list|>
-name|sqlTemplateQueries
-decl_stmt|;
-specifier|protected
-name|Collection
-argument_list|<
-name|QueryDescriptor
-argument_list|>
-name|procedureQueries
-decl_stmt|;
-specifier|protected
-name|Collection
-argument_list|<
-name|QueryDescriptor
-argument_list|>
-name|ejbqlQueries
+name|execQueries
 decl_stmt|;
 specifier|protected
 name|Collection
@@ -173,21 +159,7 @@ name|LinkedList
 argument_list|<>
 argument_list|()
 expr_stmt|;
-name|sqlTemplateQueries
-operator|=
-operator|new
-name|LinkedList
-argument_list|<>
-argument_list|()
-expr_stmt|;
-name|procedureQueries
-operator|=
-operator|new
-name|LinkedList
-argument_list|<>
-argument_list|()
-expr_stmt|;
-name|ejbqlQueries
+name|execQueries
 operator|=
 operator|new
 name|LinkedList
@@ -396,38 +368,24 @@ name|query
 argument_list|)
 expr_stmt|;
 break|break;
+comment|// For now put all other queries to MappedExec list.
+comment|// Some additional flag could be introduced to control this explicitly.
 case|case
 name|QueryDescriptor
 operator|.
 name|PROCEDURE_QUERY
 case|:
-name|procedureQueries
-operator|.
-name|add
-argument_list|(
-name|query
-argument_list|)
-expr_stmt|;
-break|break;
 case|case
 name|QueryDescriptor
 operator|.
 name|SQL_TEMPLATE
 case|:
-name|sqlTemplateQueries
-operator|.
-name|add
-argument_list|(
-name|query
-argument_list|)
-expr_stmt|;
-break|break;
 case|case
 name|QueryDescriptor
 operator|.
 name|EJBQL_QUERY
 case|:
-name|ejbqlQueries
+name|execQueries
 operator|.
 name|add
 argument_list|(
@@ -482,17 +440,41 @@ name|selectQueries
 return|;
 block|}
 specifier|public
+name|Collection
+argument_list|<
+name|QueryDescriptor
+argument_list|>
+name|getExecQueries
+parameter_list|()
+block|{
+return|return
+name|execQueries
+return|;
+block|}
+specifier|public
 name|boolean
 name|hasSelectQueries
 parameter_list|()
 block|{
 return|return
+operator|!
 name|selectQueries
 operator|.
-name|size
+name|isEmpty
 argument_list|()
-operator|>
-literal|0
+return|;
+block|}
+specifier|public
+name|boolean
+name|hasExecQueries
+parameter_list|()
+block|{
+return|return
+operator|!
+name|execQueries
+operator|.
+name|isEmpty
+argument_list|()
 return|;
 block|}
 specifier|public
